fix: align footer&navbar

--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,17 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  /* max-width: 100vw;
-  max-height: 100vh; */
+  padding: 0;
   font-family: "Montserrat", sans-serif;
 }
 
-html,body {
+html,
+body {
   width: 100%;
-  height: auto;
-  margin: 0px;
-  padding: 0px;
+  height: 100%;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
   line-height: 1.75;
 }
 
@@ -26,8 +26,22 @@ html,body {
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
   overflow: hidden;
-  height: 100%;
-  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.routes-box {
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+.footer {
+  flex-shrink: 0;
+}
+
+.routes {
+  height: max-content;
 }
 
 ul {
@@ -48,8 +62,3 @@ input:focus,
 button:focus {
   outline: none;
 }
-
-/*-------------------------------------------------------------------------------- \
-|                                 SPECIFIC STYLING                                 |
-\-------------------------------------------------------------------------------- */
-
